# pycvat

./: .flake8  .pre-commit-config.yaml  HISTORY.md  pyproject.toml
code_gen/: config.json
cvat_api/: README.md  setup.py
cvat_api/cvat_api/: __init__.py  api_client.py  configuration.py
cvat_api/docs/: AuthApi.md  Data.md  Job.md  JobsApi.md  LambdaApi.md  Project.md  ProjectsApi.md  RestrictionsApi.md  ServerApi.md  SimpleJob.md  Task.md  TasksApi.md  UsersApi.md
cvat_api/test/: test_about.py  test_attribute.py  test_attribute_val.py  test_auth_api.py  test_body.py  test_client_file.py  test_data.py  test_data_meta.py  test_dataset_format.py  test_dataset_formats.py  test_exception.py  test_file_info.py  test_frame_meta.py  test_inline_response200.py  test_inline_response2001.py  test_inline_response2002.py  test_job.py  test_jobs_api.py  test_label.py  test_labeled_data.py  test_labeled_image.py  test_labeled_shape.py  test_labeled_track.py  test_lambda_api.py  test_log_event.py  test_login.py  test_password_change.py  test_password_reset.py  test_password_reset_confirm.py  test_project.py  test_projects_api.py  test_remote_file.py  test_restricted_register.py  test_restrictions_api.py  test_rq_status.py  test_segment.py  test_server_api.py  test_server_file.py  test_simple_job.py  test_task.py  (+5 more)
cvat_tracker/: __init__.py  conftest.py  cvat_tracker_main.py  faker_providers.py  frame_provider.py  task.py  tracker.py
pycvat/: __init__.py  faker_providers.py  type_helpers.py
python-client/: README.md  setup.py
testing_framework/: pytest.ini  pytest_local.ini
(+234 files in other folders)
