[tool.poetry]
name = "cvat-tracker"
version = "0.2.1"
description = "Tool for automating annotations done with CVAT."
authors = ["Daniel Petti <djpetti@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
loguru = "^0.5.1"
pillow = "^7.2.0"
datumaro = {path = "cvat/datumaro", develop = false}
methodtools = "^0.4.2"
numpy = "^1.19.1"
opencv-python = "^4.4.0"
opencv-contrib-python = "^4.4.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
pre-commit = "^2.6.0"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
